[package]
name = "rrn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexiv2 = "0.10"
clap = { version = "4.2.7", features = ["derive"] }
cute = "0.3"
colored = "2"
derivative = "2"
rayon = "1.7"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true